--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: deploy to docker
-      run: bash ./docker/scripts/docker-push.sh -t ${GITHUB_REF##*/} -p
+      run: |
+        echo ${GITHUB_REF##*/}
+        bash ./docker/scripts/docker-push.sh -t ${GITHUB_REF##*/} -p
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
