--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,9 @@ jobs:
     - name: deploy to docker
       run: |
         echo ${GITHUB_REF##*/}
-        bash ./docker/scripts/docker-push.sh -t develop -p
+        pwd
+        echo pwd
+        bash ../../docker/scripts/docker-push.sh -t develop -p
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
