--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Deploy
-# only triggers on pull request closed events
+# only trigger on pull request closed events
 on:
   pull_request:
     branches:
